# code-review

./: .env  README.md  package-lock.json  pyproject.toml
procopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
procopt/client/: package-lock.json  package.json
procopt/client/public/: index.html
procopt/client/src/: App.js  Chat.js
procopt/client/src/styles/: index.css
procopt/server/: app.py  database.sqlite  llm_utils.py  pipeline.py  prompts.py  utils.py
procopt/server/routes/: main.py  uploads.py
